# ml-zoomcamp-2025-capstone

./: .dockerignore  Dockerfile  README.md  fly.toml  predict.py  pyproject.toml  test_api.py  train.py
notebooks/: notebook.ipynb
